# snakegame

./: .gitignore  README.md  flake.nix  run.sh
c/src/: main.c
go/: go.mod
go/src/: main.go
haskell/src/: main.hs
java/: .gitignore  .project  README.md  gradle.properties  settings.gradle.kts  snakegame.nix
java/app/: build.gradle.kts
java/app/src/main/java/snakegame/: Dimensions.java  EvaluatedState.java  Game.java  Main.java
java/app/src/main/java/snakegame/logic/: Shared.java  Snake.java  State.java
java/app/src/main/java/snakegame/renderer/: GameFrame.java  GameWindow.java  Input.java  Renderer.java
java/src/: Dimensions.java  Main.java
java/src/logic/: Shared.java  Snake.java  State.java
java/src/renderer/: Renderer.java
kotlin/: .project  settings.gradle.kts
kotlin/src/: Main.kt
py/: .gitignore  README.md  flake.nix  main.py  pyproject.toml  snakegame.nix
py/engine/: board.py  snake.py
py/fuck/: pyproject.toml  result  snakegame.nix
py/fuck/.t/: flake.nix
py/fuck/.t/snakegame/: game.py  main.py
py/fuck/.t/snakegame/gui/: drawing.py
py/fuck/src/engine/: shared.py
py/fuck/src/gui/: drawing.py
py/gui/: drawing.py  input.py
py/src/: game.py  main.py
py/src/engine/: board.py  shared.py  snake.py
py/src/gui/: drawing.py  input.py
rs/: Cargo.toml  README.md  result  snakegame.nix
rs/src/: dimensions.rs  game.rs  logic.rs  main.rs  renderer.rs
scala/: build.sbt
