[project]
name = "snakegame"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
 "pygame>=2.6.1",
]

[project.scripts]
# snakegame = "snakegame:hello"
snakegame = "snakegame:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0", "setuptools"]
build-backend = "uv_build"
[tool.uv.extra-build-dependencies]
pygame = ["setuptools","cython"]
# [tools.uv]
# package = false
